fixed final bug

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
     <div class="background"></div>
 
-    <a href="explanation.html" class="explanation-btn">Explanation</a>
+    <a href="explanation.html" class="explanation-btn slide-in">Explanation</a>
+
 
     <script src="script.js"></script>
 </body>
