--- a/explanation.html
+++ b/explanation.html
@@ -5,8 +5,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="background">
-        <p class="explanation-text">HAHA I knew you'd ask this. 1095 represents the number of days we've been together! 365 x 3 = 1095! Love you!.</p>
-    </div>
+    <div class="background"></div>
+
+    <p class="explanation-text">
+        HAHA I knew you'd ask this. 1095 represents the number of days we've been together! 365 x 3 = 1095! Love you!
+    </p>
+
+    <a href="index.html" class="explanation-btn slide-in">Back</a>
 </body>
 </html>
